tests/errors/builtin-no-annotation/main.pa
def length = built-in "list-length"
